--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <h1>My First Bootstrap Page</h1>
             <p>This part is inside a .container class.</p>
-            <p>The .container class provides a responsive fixed width container.</p>
+            <p>The .container class provides a responsive fixed width container.er class provides a responsive fixed width container.</p>
         </div>
     </body>
 </html>
