--- a/index.html
+++ b/index.html
@@ -6,13 +6,75 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+        <style>
+            section{
+                padding: 60px 0;
+            }
+        </style>
     </head>
 
     <body>
-        <div class="container">
-            <h1>My First Bootstrap Page</h1>
-            <p>This part is inside a .container class.</p>
-            <p>The .container class provides a responsive fixed width container.er class provides a responsive fixed width container.</p>
-        </div>
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+            <div class="container-xxl">
+                <a href="#intro" class="navbar-brand">
+                    <span class="fw-bold text-dark">
+                        Magnus Ottosen
+                    </span>
+                </a>
+                <!-- toggle button for mobile -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- navbar links -->
+                <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+                    <ul class="navbar-nav">
+                        <li class="navitem">
+                            <a class="nav-link" href="#cv">CV</a>
+                        </li>
+                        <li class="navitem">
+                            <a class="nav-link" href="#contast">Kontakt info</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <!-- main intro-->
+        <section id="intro">
+            <div class="container-lg">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-5 text-center text-md-start">
+                        <h1>
+                            <div class="display-2">test</div>
+                            <div class="display-5 text-muted">test2</div>
+                        </h1>
+                        <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, cumque.</p>
+
+                    </div>
+                    <div class="col-md-5 text-center d-none d-md-block">
+                        <img class="img-fluid" src="/assets/download.jpg" alt="test">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- cv -->
+        <section id="cv">
+            <div class="container-lg">
+                <p>CV</p>
+            </div>
+        </section>
+        
+        <!-- contact info -->
+        <section id="contact">
+            <div class="container-lg">
+                <p>Kontakt info</p>
+            </div>
+        </section>
+
+
     </body>
 </html>
